- Fixed admin bypass permissions not being taken into account when using commands. Thanks, @yriokiri and @Endaar, for the bug reports!
- When moving a powerblock, selecting the current powerblock's location will no longer tell you that the location is already occupied. Instead, it'll just tell you everything went well.

Alpha 0.1.8.28
- Fixed chains not rotating when they should. Thanks, @Sorienrot, for the bug report!
- Fixed "/listplayerdoors <player>" always sending its result to the server, even if it was issued by a player. Thanks, @Minecreeper.Isi, for the bug report!
- Made audio range configurable. Thanks, @OverDhill, for the suggestion!
- Whenever a chunk with active doors is unloaded, the animations will now be canceled regardless of whether or not the unload is canceled. This also goes for forceloaded chunks. Ignoring forceloaded chunks solves an issue with the server sometimes unloading forceloaded chunks regardless (looking at you, Tuinity). Thanks, @Gorderok, for the bug report!
- Tighten timing on animation cancellation.

Alpha 0.1.8.27
- Added support for version 1.16.4 of Minecraft.
- New command: "/listplayerdoors <player>". This command will list all doors owned by the given player. Permission: "bigdoors.admin.listplayerdoors".
- Fixed build permission checking issues for PlotSquared roads. Affects all supported versions of PlotSquared (3-5). Thanks, @xTronix, for the bug report!
- Made the format of log messages regarding a bit more consistent. Thanks, @SlimeDog, for the suggestion!
- Added commands: "/bigdoors disabletoggle" and "/bigdoors enabletoggle" to disable all door toggles on the server. Disabletoggle also cancels any toggles active when it is called. Permission for both: "bigdoors.admin.disabletoggle". Thanks, @SlimeDog, for the suggestion!

Alpha 0.1.8.26
- Added method to get all available doors. Thanks, @Chojo, for the implementation.